--- a/l.html
+++ b/l.html
@@ -11,13 +11,53 @@
   </style>
 </head>
 <body>
-  <!-- Your existing HTML structure -->
-  <script type="module">
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./service-worker.js')
-        .then(() => console.log('Service Worker Registered'))
-        .catch((err) => console.error('Service Worker Registration Failed:', err));
-    }
-  </script>
+    
+    <!-- Custom Install Button -->
+    <button id="installButton" style="display: none; position: fixed; bottom: 20px; right: 20px; padding: 10px 20px; background: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">
+        Install App
+    </button>
+
+    <!-- Register Service Worker -->
+    <script type="module">
+        
+        // Defer the install prompt
+        let deferredPrompt;
+        const installButton = document.getElementById('installButton');
+
+        window.addEventListener('beforeinstallprompt', (event) => {
+            // Prevent the default mini-infobar from appearing
+            event.preventDefault();
+            deferredPrompt = event;
+
+            // Show the custom install button
+            installButton.style.display = 'block';
+
+            installButton.addEventListener('click', () => {
+                // Hide the install button
+                installButton.style.display = 'none';
+
+                // Show the install prompt
+                deferredPrompt.prompt();
+
+                // Wait for the user to respond to the prompt
+                deferredPrompt.userChoice.then((choiceResult) => {
+                    if (choiceResult.outcome === 'accepted') {
+                        console.log('User accepted the install prompt');
+                    } else {
+                        console.log('User dismissed the install prompt');
+                    }
+                    deferredPrompt = null; // Clear the prompt
+                });
+            });
+        });
+
+        // Register the service worker
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('./service-worker.js')
+                .then(() => console.log('Service Worker Registered'))
+                .catch((err) => console.error('Service Worker Registration Failed:', err));
+        }
+    </script>
 </body>
+
 </html>
